# dp_algebra

./: .gitignore  README.md  docker-compose.yml  pubspec.yaml  secrets.sh
.github/: dependabot.yml
.github/workflows/: dart.yml  django.yml  docker-publish.yml  (+3 more)
algebra_lib/: README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  db_diagram.uml  manage.py  prod-db.sql  pyproject.toml  pytest.ini  requirements-test.in  requirements.in  requirements.txt  ruff.toml  run-api.sh
backend/algebra_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/articles/: admin.py  models.py  urls.py  views.py
backend/articles/migrations/: 0001_initial.py  0002_alter_blocktranslation_table_and_more.py  0002_blocktype_alter_article_options_alter_block_options_and_more.py  0003_blocktype_show_title.py  0004_literature.py  0005_alter_literature_ref_name.py  0006_block_number_reflabel.py  0007_literature_edition_literature_isbn_and_more.py  0008_learnimage.py  0009_learnimage_number.py  0010_blocktype_figure.py  0011_remove_learnimage_number.py  0012_alter_article_options_and_more.py  0013_delete_reflabel.py  0014_alter_blocktype_code.py
backend/articles/tests/: test_literature.py  tests.py
backend/articles/v2/: serializers.py  urls.py  views.py
ci_cd/: Dockerfile.traefik  docker-compose.yml  run.sh  traefik.toml
flutter_app/: Dockerfile  README.md  pubspec.yaml
lib/: app.dart  dev.dart  main.dart  secrets.dart.gpg  theme.dart
precise_fractions/: pubspec.yaml
test/: widget_test.dart
web/: index.html
(+308 files in other folders)
