[project]
name = "algebra-api"
version = "0.1.0"
description = "Algebra API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "granian>=2.7.4",
    "pillow>=12.2.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.11.1",
    "ruff>=0.14.8",
]
